[users] запрос пользователя по ID
