# pkg/responses/error.go
@@ -15,11 +15,11 @@ func RespondError(ctx *gin.Context, code int, value interface{}) {
 	if err, ok := value.(error); ok {
 		value = err.Error()
 	}
-	ctx.JSON(code, httpError{Error: value})
+	ctx.AbortWithStatusJSON(code, httpError{Error: value})
 }
 
 // Для ошибок со статусом 500 (предусматривается логирование)
 func RespondInternalError(ctx *gin.Context, err error) {
 	log.Printf("%+v\n", err)
-	ctx.Status(500)
+	ctx.AbortWithStatus(500)
 }
