# users/controllers/responses/users.go
@@ -4,3 +4,9 @@ package responses
 type Token struct {
 	Value string `json:"token"`
 }
+
+// Ответ сервера в виде найденного пользователя в БД
+type User struct {
+	ID       int32  `json:"id"`
+	Username string `json:"username"`
+}
